core/themes/seven/css/theme/ckeditor-dialog.css
/**
 * @file
 * CKEditor-native dialogs theming.
 */

.cke_dialog_background_cover {
  display: none;
}
.cke_dialog:before {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: "";
  opacity: 0.7;
  background: #000;
}
[dir="rtl"] .cke_reset_all * {
  text-align: right;
  direction: rtl;
}
.cke_reset_all .cke_dialog_body {
  position: relative;
  border: 0;
  border-radius: 0;
  background: none;
}
.cke_reset_all .cke_dialog_body * {
  font: 13px/1.538em "Lucida Grande", "Lucida Sans Unicode", "DejaVu Sans", "Lucida Sans", sans-serif;
}

/* Dialog's header. */
.cke_reset_all .cke_dialog_title {
  padding: 15px 49px 15px 15px;
  color: #fff;
  border: 0;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  background: #6b6b6b;
  box-shadow: none;
  text-shadow: none;
  font-size: 1.3344em;
  font-weight: 600;
  line-height: 1.315em;
  -webkit-font-smoothing: antialiased;
}
[dir="rtl"] .cke_reset_all .cke_dialog_title {
  padding: 15px 15px 15px 49px;
}

/* More specificity to prevent overriding in high density screens. */
.cke_reset_all .cke_dialog .cke_dialog_close_button {
  top: 16px;
  right: 20px;
  width: 16px;
  height: 16px;
  opacity: 1;
  background: url(../../../../misc/icons/ffffff/ex.svg) 0 0 no-repeat;
}
[dir="rtl"] .cke_reset_all .cke_dialog .cke_dialog_close_button {
  right: auto;
  left: 20px;
}
.cke_reset_all .cke_dialog .cke_label {
  display: none;
}

/* Dialog's body. */
.cke_reset_all .cke_dialog_contents {
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
}
.cke_reset_all .cke_dialog_contents_body {
  padding: 1em;
}
.cke_reset_all tr:hover,
.cke_reset_all tr:focus {
  background: none;
}
[dir="rtl"] .cke_reset_all .cke_dialog_ui_hbox_first,
[dir="rtl"] .cke_reset_all .cke_dialog_ui_hbox_child {
  padding-right: 0;
  padding-left: 10px;
}
.cke_reset_all .cke_dialog_body label {
  display: table;
  margin: 0 0 0.1em;
  padding: 0;
  font-weight: bold;
}
.cke_reset_all .cke_dialog_body .cke_dialog_ui_input_text,
.cke_reset_all .cke_dialog_body .cke_dialog_ui_input_textarea,
.cke_reset_all .cke_dialog_body div.cke_dialog_ui_input_select {
  border: 0;
}
.cke_reset_all .cke_dialog_body textarea,
.cke_reset_all .cke_dialog_body input[type="text"],
.cke_reset_all select.cke_dialog_ui_input_select {
  box-sizing: border-box;
  max-width: 100%;
  margin: 0 0 3px;
  padding: 0.3em 0.4em 0.3em 0.5em;
  -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
  transition: border linear 0.2s, box-shadow linear 0.2s;
  color: #595959;
  border: 1px solid #b8b8b8;
  border-top-color: #999;
  border-radius: 2px;
  background: #fcfcfa;
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.125);
  font-size: 1em;
  line-height: normal;
}
.cke_reset_all select.cke_dialog_ui_input_select {
  padding-right: 1.5em;
  background: #fcfcfa url(../../../../misc/icons/333333/caret-down.svg) no-repeat 99% 63%;
}
.cke_reset_all .cke_dialog_body textarea:focus,
.cke_reset_all .cke_dialog_body input[type="text"]:focus,
.cke_reset_all select.cke_dialog_ui_input_select:focus {
  border-color: #40b6ff;
  outline: 0;
  background-color: #fff;
  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05), 0 0 8px #40b6ff;
}

/* Dialog's footer. */
.cke_reset_all .cke_dialog .cke_dialog_footer {
  margin: 0;
  padding: 15px 20px;
  text-align: left;
  border: 0;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
  outline: none;
  background: #f5f5f2;
}
[dir="rtl"] .cke_reset_all .cke_dialog .cke_dialog_footer {
  text-align: right;
}
.cke_reset_all .cke_dialog .cke_resizer {
  display: none;
}
.cke_reset_all .cke_dialog_footer_buttons {
  margin: 0;
}
.cke_dialog_footer_buttons td {
  float: right;
}
[dir="rtl"] .cke_dialog_footer_buttons td {
  float: left;
}
.cke_reset_all a.cke_dialog_ui_button {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  margin-right: 1em;
  padding: 4px 1.5em;
  cursor: pointer;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  text-align: center;
  text-decoration: none;
  color: #333;
  border: 1px solid #a6a6a6;
  border-radius: 20em;
  background-color: #f2f1eb;
  background-image: -webkit-linear-gradient(top, #f6f6f3, #e7e7df);
  background-image: linear-gradient(to bottom, #f6f6f3, #e7e7df);
  text-shadow: 0 1px hsla(0, 0%, 100%, 0.6);
  font-size: 14px;
  font-size: 0.875rem;
  font-weight: 600;
  line-height: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  -webkit-font-smoothing: antialiased;
}
[dir="rtl"] .cke_reset_all a.cke_dialog_ui_button {
  margin-right: 0;
  margin-left: 1em;
}

/* More specificity to prevent overriding in high contrast mode. */
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button:hover,
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button:focus {
  padding: 4px 1.5em;
  text-decoration: none;
  color: #1a1a1a;
  border: 1px solid #a6a6a6;
  background-color: #f9f8f6;
  background-image: -webkit-linear-gradient(top, #fcfcfa, #e9e9dd);
  background-image: linear-gradient(to bottom, #fcfcfa, #e9e9dd);
  box-shadow: 0 1px 2px hsla(0, 0%, 0%, 0.125);
}
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button:focus {
  z-index: 10;
  border: 1px solid #3ab2ff;
  box-shadow: 0 0 0.5em 0.1em hsla(203, 100%, 60%, 0.7);
}
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button:active {
  padding: 4px 1.5em;
  -webkit-transition: none;
  transition: none;
  border: 1px solid #a6a6a6;
  background-color: #dfdfd9;
  background-image: -webkit-linear-gradient(top, #f6f6f3, #e7e7df);
  background-image: linear-gradient(to bottom, #f6f6f3, #e7e7df);
  box-shadow: inset 0 1px 3px hsla(0, 0%, 0%, 0.2);
}
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button span {
  padding: 0;
  text-shadow: 0 1px hsla(0, 0%, 100%, 0.6);
  font-size: 0.875rem;
  line-height: normal;
}
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button:hover span,
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button:focus span,
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button:active span {
  padding: 0;
}
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button_ok {
  color: #fff;
  border-color: #1e5c90;
  background-color: #0071b8;
  background-image: -webkit-linear-gradient(top, #007bc6, #0071b8);
  background-image: linear-gradient(to bottom, #007bc6, #0071b8);
  text-shadow: 0 1px hsla(0, 0%, 0%, 0.5);
  font-weight: 700;
  -webkit-font-smoothing: antialiased;
}
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button_ok:hover,
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button_ok:focus {
  color: #fff;
  border-color: #1e5c90;
  background-color: #2369a6;
  background-image: -webkit-linear-gradient(top, #0c97ed, #1f86c7);
  background-image: linear-gradient(to bottom, #0c97ed, #1f86c7);
  box-shadow: 0 1px 2px hsla(203, 10%, 10%, 0.25);
}
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button_ok:focus {
  border: 1px solid #1280df;
  box-shadow: 0 0 0.5em 0.1em hsla(203, 100%, 60%, 0.7);
}
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button_ok:active {
  border-color: #144b78;
  background-image: -webkit-linear-gradient(top, #08639b, #0071b8);
  background-image: linear-gradient(to bottom, #08639b, #0071b8);
  box-shadow: inset 0 1px 3px hsla(0, 0%, 0%, 0.2);
}
.cke_reset_all .cke_dialog_footer_buttons a.cke_dialog_ui_button_ok span {
  text-shadow: 0 1px hsla(0, 0%, 0%, 0.5);
}

/* fixing tabs overlaps with ckeditor */
.cke_inner {
  position: relative;
  z-index: 1;
}

